--- a/public/enter-vin.html
+++ b/public/enter-vin.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Decode vehicle VIN numbers with TrustCar.io. Get instant safety ratings, recall information, and vehicle specifications from NHTSA data.">
         <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
     <style>
         body { margin: 0; padding: 0; font-family: 'Nunito', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; background: #f5f8fa; color: #0b1724; }
@@ -54,6 +55,7 @@
         #cameraModal.open { display: flex; }
         #cameraPreview { width: 100%; max-width: 400px; border-radius: 8px; background: black; position: relative; aspect-ratio: 16/9; }
         #vinGuide { position: absolute; top: 50%; left: 20%; width: 60%; height: 40px; border: 2px dashed #10b981; transform: translateY(-50%); border-radius: 4px; pointer-events: none; }
+        #barcodeHint { margin-top: .75rem; color: #fef3c7; font-weight: 700; background: rgba(15, 23, 42, 0.35); padding: .5rem .75rem; border-radius: 8px; display: none; }
         .slider { width: 100%; max-width: 400px; margin: 1rem 0; }
         #captureBtn { background: #10b981; color: white; border: none; padding: 0.85rem 2rem; border-radius: 10px; font-weight: 700; cursor: pointer; margin-top: 1rem; }
         #captureBtn:hover { background: #059669; }
@@ -101,6 +103,7 @@
         <button id="closeCamera" aria-label="Close camera">&times;</button>
         <video id="cameraPreview" autoplay muted playsinline></video>
         <div id="vinGuide" aria-hidden="true"></div>
+        <div id="barcodeHint">Position barcode in guide for fastest results</div>
         <label for="boxWidthSlider">Box Width (%)</label>
         <input type="range" id="boxWidthSlider" min="40" max="90" value="60" class="slider" aria-label="Adjust VIN guide width">
         <label for="boxHeightSlider">Box Height (px)</label>
@@ -599,26 +602,54 @@
                     }
                     cropCtx.putImageData(imgData, 0, 0);
 
-                    cropCanvas.toBlob(async (blob) => {
-                        try {
-                            const { data: { text } } = await Tesseract.recognize(blob, 'eng', {
-                                tessedit_char_whitelist: 'ABCDEFGHJKMNPQRSTUVWXYZ0123456789'
-                            });
-                            const cleaned = text.trim().replace(/[^A-HJ-NPR-Z0-9]/g, '').substring(0, 17).toUpperCase();
-                            if (cleaned.length === 17) {
-                                vinInput.value = cleaned;
-                                decodeVIN();
-                            } else {
-                                alert('VIN not detected accurately. Try adjusting box or manual entry.');
+                    const barcodeHint = document.getElementById('barcodeHint');
+
+                    const tryTesseract = () => {
+                        cropCanvas.toBlob(async (blob) => {
+                            try {
+                                const { data: { text } } = await Tesseract.recognize(blob, 'eng', {
+                                    tessedit_char_whitelist: 'ABCDEFGHJKMNPQRSTUVWXYZ0123456789'
+                                });
+                                const cleaned = text.trim().replace(/[^A-HJ-NPR-Z0-9]/g, '').substring(0, 17).toUpperCase();
+                                if (cleaned.length === 17) {
+                                    vinInput.value = cleaned;
+                                    decodeVIN();
+                                } else {
+                                    alert('VIN not detected accurately. Try adjusting box or manual entry.');
+                                }
+                            } catch (err) {
+                                alert('OCR failed. Please try manual entry.');
+                                console.error(err);
+                            } finally {
+                                stopStream();
+                                modal?.classList.remove('open');
                             }
-                        } catch (err) {
-                            alert('OCR failed. Please try manual entry.');
-                            console.error(err);
-                        } finally {
-                            stopStream();
-                            modal?.classList.remove('open');
-                        }
-                    }, 'image/png');
+                        }, 'image/png');
+                    };
+
+                    if (window.Quagga) {
+                        Quagga.decodeSingle({
+                            decoder: { readers: ["code_39_reader", "code_128_reader"] },
+                            locate: true,
+                            src: cropCanvas.toDataURL()
+                        }, (result) => {
+                            if (result && result.codeResult) {
+                                const scannedVIN = (result.codeResult.code || '').toUpperCase();
+                                if (scannedVIN.length === 17 && /^[A-HJ-NPR-Z0-9]{17}$/.test(scannedVIN)) {
+                                    vinInput.value = scannedVIN;
+                                    if (barcodeHint) barcodeHint.style.display = 'block';
+                                    decodeVIN();
+                                    stopStream();
+                                    modal?.classList.remove('open');
+                                    return;
+                                }
+                            }
+                            // fallback to OCR
+                            tryTesseract();
+                        });
+                    } else {
+                        tryTesseract();
+                    }
                 });
             }
 
