--- a/public/enter-vin.html
+++ b/public/enter-vin.html
@@ -51,10 +51,10 @@
         @media (max-width:720px){ .actions { flex-direction: column; align-items: stretch; } }
 
         /* Camera Modal */
-        #cameraModal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 1000; flex-direction: column; align-items: center; justify-content: flex-start; padding: 2.5rem 1rem 1rem; color: white; }
+        #cameraModal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 1000; flex-direction: column; align-items: center; justify-content: center; padding: 1.5rem 1rem; color: white; }
         #cameraModal.open { display: flex; }
         #cameraPreview { width: 100%; max-width: 400px; border-radius: 8px; background: black; position: relative; aspect-ratio: 16/9; }
-        #vinGuide { position: absolute; top: 40%; left: 20%; width: 60%; height: 44px; border: 2px dashed #10b981; transform: translateY(-50%); border-radius: 4px; pointer-events: none; }
+        #vinGuide { position: absolute; top: 35%; left: 20%; width: 60%; height: 48px; border: 2px dashed #10b981; transform: translateY(-50%); border-radius: 4px; pointer-events: none; }
         #barcodeHint { margin-top: .75rem; color: #fef3c7; font-weight: 700; background: rgba(15, 23, 42, 0.35); padding: .5rem .75rem; border-radius: 8px; display: none; }
         .slider { width: 100%; max-width: 400px; margin: 1rem 0; }
         #captureBtn { background: #10b981; color: white; border: none; padding: 0.85rem 2rem; border-radius: 10px; font-weight: 700; cursor: pointer; margin-top: 1rem; }
