--- a/public/enter-vin.html
+++ b/public/enter-vin.html
@@ -53,8 +53,9 @@
         /* Camera Modal */
         #cameraModal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 1000; flex-direction: column; align-items: center; justify-content: center; padding: 1.5rem 1rem; color: white; }
         #cameraModal.open { display: flex; }
-        #cameraPreview { width: 100%; max-width: 400px; border-radius: 8px; background: black; position: relative; aspect-ratio: 16/9; }
-        #vinGuide { position: absolute; top: 35%; left: 20%; width: 60%; height: 48px; border: 2px dashed #10b981; transform: translateY(-50%); border-radius: 4px; pointer-events: none; }
+        #previewWrap { position: relative; width: 100%; max-width: 400px; }
+        #cameraPreview { width: 100%; border-radius: 8px; background: black; aspect-ratio: 16/9; }
+        #vinGuide { position: absolute; top: 35%; left: 10%; width: 80%; height: 52px; border: 2px dashed #10b981; transform: translateY(-50%); border-radius: 4px; pointer-events: none; box-shadow: 0 0 0 2px rgba(16,185,129,0.2); }
         #barcodeHint { margin-top: .75rem; color: #fef3c7; font-weight: 700; background: rgba(15, 23, 42, 0.35); padding: .5rem .75rem; border-radius: 8px; display: none; }
         .slider { width: 100%; max-width: 400px; margin: 1rem 0; }
         #captureBtn { background: #10b981; color: white; border: none; padding: 0.85rem 2rem; border-radius: 10px; font-weight: 700; cursor: pointer; margin-top: 1rem; }
@@ -101,8 +102,10 @@
 
     <div id="cameraModal" role="dialog" aria-modal="true" aria-label="Scan VIN">
         <button id="closeCamera" aria-label="Close camera">&times;</button>
-        <video id="cameraPreview" autoplay muted playsinline></video>
-        <div id="vinGuide" aria-hidden="true"></div>
+        <div id="previewWrap">
+            <video id="cameraPreview" autoplay muted playsinline></video>
+            <div id="vinGuide" aria-hidden="true"></div>
+        </div>
         <div id="barcodeHint">Position barcode in guide for fastest results</div>
         <label for="boxWidthSlider">Box Width (%)</label>
         <input type="range" id="boxWidthSlider" min="40" max="90" value="60" class="slider" aria-label="Adjust VIN guide width">
