Pricing: make Basic 'Get Started' button use primary styling to match Standard/Premium

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -114,7 +114,7 @@
                     <li>AI-generated summary report</li>
                     <li><strong>Instant results (30 seconds)</strong></li>
                 </ul>
-                <button class="btn btn-secondary" onclick="selectTier('basic', 49)">Get Started</button>
+                <button class="btn btn-primary" onclick="selectTier('basic', 49)">Get Started</button>
             </div>
 
             <!-- Tier 2: Standard (Most Popular) -->
